cannot leave the site using the back function, affordance for scrolling confusion. will need visual cue to be added

--- a/aartics/index.htm
+++ b/aartics/index.htm
@@ -4,6 +4,7 @@
 	<meta charset="utf-8" />
 	<title>aartics</title>
 	<link href="https://fonts.googleapis.com/css?family=ABeeZee" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="js/jquery.jInvertScroll.js"></script>
     <link rel="stylesheet" href="css/aartics.css" />
@@ -79,7 +80,7 @@
             <polygon id="s58" class="cls-1" points="2017.5 298.5 2050.5 293.5 1999.5 381.5 1969.42 381.5 2017.5 298.5"/>
             <polygon id="s35" class="cls-1" points="1805.5 303.5 1825.5 298.5 1873.5 381.5 1849.5 381.5 1805.5 303.5"/>
             <polygon id="s36" class="cls-1" points="1810.5 303.5 1855.5 224.5 1873.5 215.5 1825.5 298.5 1810.5 303.5"/>
-            <g id="grpr_box" data-attach="#_39" class="attached">
+            <g id="grpr_box" data-attach="#_39" class="attached raleway">
                 <polygon id="_39" data-name="39" class="cls-2" points="2285.31 302.5 2196.93 302.5 2152.74 379.04 2196.93 455.58 2285.31 455.58 2329.5 379.04 2285.31 302.5"/>
                 <text x="1000" y="360" data-x-rel="-130" id="grpd1">product</text>
                 <text x="1000" y="385" data-x-rel="-140" id="grpd2">&amp; graphic</text>
@@ -93,7 +94,7 @@
             <polygon id="_43" data-name="43" class="cls-2" points="2692.42 381.5 2596.58 381.5 2548.66 464.5 2596.58 547.5 2692.42 547.5 2740.34 464.5 2692.42 381.5"/>
             <polygon id="_47" data-name="47" class="cls-2" points="2408.57 549.5 2310.43 549.5 2261.35 634.5 2310.43 719.5 2408.57 719.5 2457.65 634.5 2408.57 549.5"/>
             <polygon id="s81" class="cls-1" points="2361.5 646.5 2359.5 634.5 2408.5 549.5 2412.5 558.5 2361.5 646.5"/>
-            <g id="ud_a_box" data-attach="#_26" class="attached">
+            <g id="ud_a_box" data-attach="#_26" class="attached raleway">
                 <polygon id="_26" data-name="26" class="cls-2" points="1804.67 303.5 1715.18 303.5 1670.43 381 1715.18 458.5 1804.67 458.5 1849.41 381 1804.67 303.5"/>
                 <text x="1000" y="360" data-x-rel="-150" id="uda1">five years in</text>
                 <text x="1000" y="385" data-x-rel="-155" id="uda2">urban design</text>
@@ -147,7 +148,7 @@
             <polygon id="s30" class="cls-1" points="1256.5 317.5 1330.5 317.5 1682.5 275.5 1561.5 275.5 1256.5 317.5"/>
             <polygon id="s22" class="cls-1" points="1256.5 317.5 1222.5 379.5 1388.96 380 1439.48 292.5 1256.5 317.5"/>
             <polygon id="s105" class="cls-1" points="1529.5 317.5 1566.5 381.5 1591.5 380.5 1542.5 292.5 1529.5 317.5"/>
-            <g id="msc_urb_box" data-attach="#_22" class="attached">
+            <g id="msc_urb_box" data-attach="#_22" class="attached raleway">
                 <polygon id="_22" data-name="22" class="cls-2" points="1540.52 292.5 1439.48 292.5 1388.96 380 1439.48 467.5 1540.52 467.5 1591.04 380 1540.52 292.5"/>
                 <text x="1000" y="370" data-x-rel="-155" id="msc1">european</text>
                 <text x="1000" y="395" data-x-rel="-160" id="msc2">masters in</text>
@@ -181,7 +182,7 @@
             <polygon id="_14" data-name="14" class="cls-2" points="1092.48 542.5 999.52 542.5 953.05 623 999.52 703.5 1092.48 703.5 1138.95 623 1092.48 542.5"/>
             <polygon id="_8" data-name="8" class="cls-2" points="1072.38 75.5 984.62 75.5 940.74 151.5 984.62 227.5 1072.38 227.5 1116.26 151.5 1072.38 75.5"/>
             <polygon id="s100" class="cls-1" points="1125.5 204.5 1176.5 291.5 1100.5 314.5 1061.5 247.5 1125.5 204.5"/>
-            <g id="m_d_i_a_box" data-attach="#_13" class="attached">
+            <g id="m_d_i_a_box" data-attach="#_13" class="attached raleway">
                 <polygon id="_13" data-name="13" class="cls-2" points="1106.44 379.5 1010.02 379.5 961.82 463 1010.02 546.5 1106.44 546.5 1154.65 463 1106.44 379.5"/>
                 <text x="1000" y="425" data-x-rel="-120" id="mdia7">multi -</text>
                 <text x="1000" y="450" data-x-rel="-155" id="mdia8">dimensional</text>
@@ -196,7 +197,7 @@
             <polygon id="s24" class="cls-1" points="1291.5 475.5 1342.5 564.5 1378.5 591.5 1317.5 486.5 1291.5 475.5"/>
             <polygon id="s2" class="cls-1" points="680.5 178.5 667.5 104.5 719.5 196.5 719.5 245.5 680.5 178.5"/>
             <polygon id="_6" data-name="6" class="cls-2" points="815.57 214.29 720.19 214.29 672.5 296.9 720.19 379.5 815.57 379.5 863.26 296.9 815.57 214.29"/>
-            <g id="i_r_p_box" data-attach="#_11" class="attached">
+            <g id="i_r_p_box" data-attach="#_11" class="attached raleway">
                 <polygon id="_11" data-name="11" class="cls-2" points="1125.88 204.16 1024.66 204.16 974.04 291.83 1024.66 379.5 1125.88 379.5 1176.5 291.83 1125.88 204.16"/>
                 <text x="1000" y="275" data-x-rel="-145" id="tirp5">ideation</text>
                 <text x="1000" y="300" data-x-rel="-154" id="tirp6">+ rapid</text>
@@ -206,7 +207,7 @@
             <polygon id="_4" data-name="4" class="cls-2" points="825.83 13.5 720.17 13.5 667.35 105 720.17 196.5 825.83 196.5 878.65 105 825.83 13.5"/>
             <polygon id="s19" class="cls-1" points="719.5 214.5 815.5 214.5 825.5 196.5 719.5 196.5 719.5 214.5"/>
             <polygon id="s18" class="cls-1" points="842.5 169.5 815.5 214.5 863.5 296.5 903.5 273.5 842.5 169.5"/>
-            <g id="r_b_d_box" data-attach="#_12" class="attached">
+            <g id="r_b_d_box" data-attach="#_12" class="attached raleway">
                 <polygon id="_12" data-name="12" class="cls-2" points="973.98 292.5 872.95 292.5 822.43 380 872.95 467.5 973.98 467.5 1024.5 380 973.98 292.5"/>
                 <text x="1000" y="375" data-x-rel="-155" id="trdb3">research</text>
                 <text x="1000" y="400" data-x-rel="-165" id="trdb4">by design</text>
@@ -235,8 +236,8 @@
                 <text x="402.5" y="370" data-x-rel="-320" id="gmail1"><a href="mailto:aartics@gmail.com">aartics@gmail.com</a></text>
                 <text x="402.5" y="390" data-x-rel="-320" id="title1">ux + product + interaction</text>
                 <text x="402.5" y="410" data-x-rel="-320" id="title2">designer</text>
-                <text x="402.5" y="460" data-x-rel="-320" id="linkedin1"><a href="https://www.linkedin.com/in/aartics">linkedin</a></text>
-                <text x="480" y="460" data-x-rel="-240" id="resume1"><a href="aartics_resume.pdf">| resume</a></text>
+                <text x="402.5" y="460" data-x-rel="-320" id="linkedin1" class="raleway"><a href="https://www.linkedin.com/in/aartics" target="_blank">linkedin</a></text>
+                <text x="480" y="460" data-x-rel="-240" id="resume1" class="raleway"><a href="aartics_resume.pdf" target="_blank">| resume</a></text>
             </g>
 
             <clipPath id="clipPath_wolf_box">
@@ -311,16 +312,16 @@
             </g>
 
             <g id="credits">
-                <text x="2780" y="530" id="credits0">i designed this 3D interaction with:</text>
+                <text x="2780" y="530" id="credits0">i designed this interaction with:</text>
                 <text x="2780" y="550" id="credits1">---------------------------------</text>
                 <text x="2800" y="570" id="credits2">sketchup</text>
                 <text x="2800" y="590" id="credits3">photoshop</text>
                 <text x="2800" y="610" id="credits4">illustrator</text>
                 <text x="2800" y="630" id="credits5">javascript</text>
                 <text x="2800" y="650" id="credits6">css</text>
-                <text x="2800" y="670" id="credits7">git</text>
+                <text x="2800" y="670" id="credits7">github</text>
                 <text x="2780" y="690" id="credits8">---------------------------------</text>
-                <text x="2780" y="710" id="credits9">special thanks to @owings1</text>
+                <text x="2780" y="710" id="credits9">special shout-out to @owings1</text>
                 <text x="2780" y="730" id="credits8">---------------------------------</text>
             </g>                   
         </svg>
