chess link added

--- a/aartics/index.htm
+++ b/aartics/index.htm
@@ -92,7 +92,7 @@
             <polygon id="xx03" class="cls-1" points="2329.5 296.5 2310.5 302.5 2356.5 223.5 2377.5 214.5 2329.5 296.5"/>
             <g id="chess_box" data-attach="#_36" class="attached">
                 <polygon id="_36" data-name="36" class="cls-2" points="2472.84 215.5 2378.16 215.5 2330.82 297.5 2378.16 379.5 2472.84 379.5 2520.18 297.5 2472.84 215.5"/>
-                <text x="1000" y="290" data-x-rel="-150" id="uda1">chess</text>
+                <text x="1000" y="290" data-x-rel="-150" id="uda1"><a href="https://github.com/aartics/chess_models" target="_blank">chess</a></text>
             </g>
             <polygon id="_44" data-name="44" class="cls-2" points="2705.33 64.5 2584.67 64.5 2524.33 169 2584.67 273.5 2705.33 273.5 2765.67 169 2705.33 64.5"/>
             <polygon id="_43" data-name="43" class="cls-2" points="2692.42 381.5 2596.58 381.5 2548.66 464.5 2596.58 547.5 2692.42 547.5 2740.34 464.5 2692.42 381.5"/>
