--- a/aartics/index.htm
+++ b/aartics/index.htm
@@ -235,13 +235,18 @@
             <clipPath id="clipPath_contact_box">
                 <polygon points="722.5 380.72 548.01 682.95 198.5 682.5 23.5 380.5 198.5 78.5 548.01 78.5 722.5 380.72"/>
             </clipPath>
-                <image width="1400" height="970" x="-330" y="-100" data-x-rel="-1050" xlink:href="../img/arrow_intro.gif" class="image" id="contact_intro"/>
+                <image width="770" height="770" x="-1" y="-5" data-x-rel="-725" xlink:href="img/contact_intro.png" class="image" id="contact_intro"/>
                 <polygon id="_1" data-name="1" class="cls-2 contact_class" points="722.5 380.72 548.01 682.95 198.5 682.5 23.5 380.5 198.5 78.5 548.01 78.5 722.5 380.72"/>
-                <text x="402.5" y="370" data-x-rel="-320" id="gmail1"><a href="mailto:aartics@gmail.com">aartics@gmail.com</a></text>
-                <text x="402.5" y="390" data-x-rel="-320" id="title1">ux + product + interaction</text>
-                <text x="402.5" y="410" data-x-rel="-320" id="title2">designer</text>
-                <text x="402.5" y="460" data-x-rel="-320" id="linkedin1" class="raleway"><a href="https://www.linkedin.com/in/aartics" target="_blank">linkedin</a></text>
-                <text x="480" y="460" data-x-rel="-240" id="resume1" class="raleway"><a href="aartics_resume.pdf" target="_blank">| resume</a></text>
+                <text x="205" y="382" data-x-rel="-520" id="aarti">aarti</text>
+                <text x="290" y="382" data-x-rel="-435" id="c">c</text>
+                <text x="325" y="382" data-x-rel="-400" id="sharma">sharma</text>
+                <text x="480" y="400" data-x-rel="-246" id="pipe">|</text>
+                <text x="511" y="360" data-x-rel="-212" id="title3" class="desc_text">multidisciplinary</text>
+                <text x="511" y="382" data-x-rel="-212" id="title1" class="desc_text">ux + interaction</text>
+                <text x="511" y="404" data-x-rel="-212" id="title2" class="desc_text">designer</text>
+                <text x="190" y="440" data-x-rel="-535" id="gmail1" class="contact_text"><a href="mailto:aartics@gmail.com">aartics@gmail.com</a></text>
+                <text x="370" y="440" data-x-rel="-355" id="linkedin1" class="contact_text"><a href="https://www.linkedin.com/in/aartics" target="_blank">| &nbsp; &nbsp; linkedin</a></text>
+                <text x="485" y="440" data-x-rel="-240" id="resume1" class="contact_text"><a href="aartics_resume.pdf" target="_blank">| &nbsp; &nbsp; resume</a></text>
                 <text x="285" y="675" data-x-rel="-435" id="scrolldown" class="traleway">scroll down</text>
                 <text x="375" y="675" data-x-rel="-345" id="toexplore" class="traleway">to explore</text>
             </g>
@@ -252,19 +257,22 @@
             </clipPath>
                 <image width="350" height="220" x="800" y="490" data-x-rel="-300" xlink:href="../img/wl_intro.png" class="image" id="wpimg"/>
                 <polygon id="_18" data-name="18" class="cls-2 project_box" points="1036.3 490.5 909.86 490.5 846.64 600 909.86 709.5 1036.3 709.5 1099.52 600 1036.3 490.5"/>
-<!--                 <text x="910" y="530" data-x-rel="-190" id="tw1">wolf and lion</text> -->
+                <text x="925" y="515" data-x-rel="-175" id="tw1" class="casestudy"><a href="projects/wolflion" target="_blank">UX CASE STUDY:</a></text>
+                <text x="930" y="550" data-x-rel="-170" id="tw2"class="projectdescription"><a href="projects/wolflion" target="_blank">an online pet</a></text>
+                <text x="920" y="570" data-x-rel="-180" id="tw3"class="projectdescription"><a href="projects/wolflion" target="_blank">store experience</a></text>
+                <text x="920" y="685" data-x-rel="-180" id="tw4" class="projectname"><a href="projects/wolflion" target="_blank">wolf &amp; lion</a></text>
             </g>
 
             <g id="resonate_ai_box" data-attach="#_7" class="attached" style="clip-path: url(#clipPath_resonate_box);" data-clip-path="#clipPath_resonate_box">
                 <clipPath id="clipPath_resonate_box">
                     <polygon points="1024.04 64.5 903.11 64.5 842.65 169.22 903.11 273.95 1024.04 273.95 1084.5 169.22 1024.04 64.5"/>
                 </clipPath>
-                <image width="580" height="220" x="670" y="60" data-x-rel="-410" xlink:href="../img/resonate.gif" class="image" id="resonate_intro"/>
+                <image width="560" height="220" x="685" y="55" data-x-rel="-400" xlink:href="img/resonateai.png" class="image" id="resonate_intro"/>
                 <polygon id="_7" data-name="7" class="cls-2 project_box" points="1024.04 64.5 903.11 64.5 842.65 169.22 903.11 273.95 1024.04 273.95 1084.5 169.22 1024.04 64.5"/>
                 <text x="920" y="85" data-x-rel="-165" id="trai6" class="casestudy"><a href="projects/resonateai" target="_blank">UX CASE STUDY:</a></text>
-                <text x="900" y="100" data-x-rel="-185" id="trai9"class="projectdescription"><a href="projects/resonateai" target="_blank">Experience how AI can</a></text>
-                <text x="900" y="120" data-x-rel="-185" id="trai10"class="projectdescription"><a href="projects/resonateai" target="_blank">help tell your story</a></text>
-                <text x="900" y="175" data-x-rel="-185" id="trai8" class="projectname"><a href="projects/resonateai" target="_blank">resonate.ai</a></text>
+                <text x="905" y="145" data-x-rel="-180" id="trai9"class="projectdescription"><a href="projects/resonateai" target="_blank">let ai help you tell</a></text>
+                <text x="908" y="165" data-x-rel="-177" id="trai10"class="projectdescription"><a href="projects/resonateai" target="_blank">an effective story</a></text>
+                <text x="912" y="255" data-x-rel="-173" id="trai8" class="projectname"><a href="projects/resonateai" target="_blank">resonate.ai</a></text>
             </g>
 
 
@@ -273,10 +281,12 @@
                 <clipPath id="clipPath_sfac_box">
                     <polygon points="1352.45 280.5 1237.55 280.5 1180.11 380 1237.55 479.5 1352.45 479.5 1409.89 380 1352.45 280.5"/>
                 </clipPath>
-                <image width="350" height="220" x="1125" y="270" data-x-rel="-280" xlink:href="../img/sfac_intro.png" class="image" id="sfac_intro"/>
+                <image width="350" height="220" x="1125" y="270" data-x-rel="-280" xlink:href="img/sfac_intro.png" class="image" id="sfac_intro"/>
                 <polygon id="_16" data-name="16" class="cls-2 project_box" points="1352.45 280.5 1237.55 280.5 1180.11 380 1237.55 479.5 1352.45 479.5 1409.89 380 1352.45 280.5"/>
-<!--                 <text x="1230" y="325" data-x-rel="-185" id="tsfac7"><a href="projects/sfac" target="_blank">san francisco</a></text> -->
-<!--                 <text x="1220" y="350" data-x-rel="-195" id="tsfac7"><a href="projects/sfac" target="_blank">arts commission</a></text> -->
+                <text x="1250" y="300" data-x-rel="-165" id="trsf6" class="casestudy"><a href="projects/sfac" target="_blank">UX CASE STUDY:</a></text>
+                <text x="1235" y="330" data-x-rel="-175" id="trsf9"class="projectdescription"><a href="projects/sfac" target="_blank">engage citizens in</a></text>
+                <text x="1230" y="350" data-x-rel="-180" id="trsf10"class="projectdescription"><a href="projects/sfac" target="_blank">choosing public art</a></text>
+                <text x="1280" y="460" data-x-rel="-130" id="trsf8" class="projectname"><a href="projects/sfac" target="_blank">sfac</a></text>                
             </g>
 
 
