text alignments improved

--- a/aartics/index.htm
+++ b/aartics/index.htm
@@ -175,10 +175,10 @@
             </g>
             <g id="m_d_i_a_box" data-attach="#_13" class="attached raleway">
                 <polygon id="_13" data-name="13" class="cls-2" points="1106.44 379.5 1010.02 379.5 961.82 463 1010.02 546.5 1106.44 546.5 1154.65 463 1106.44 379.5"/>
-                <text x="1050" y="425" data-x-rel="-120" id="mdia7" class="ux">multi -</text>
-                <text x="1020" y="450" data-x-rel="-155" id="mdia8" class="ux">dimensional</text>
-                <text x="1020" y="475" data-x-rel="-155" id="mdia9" class="ux">information</text>
-                <text x="2000" y="500" data-x-rel="-155" id="mdia10" class="ux">architecture</text>
+                <text x="1030" y="425" data-x-rel="-125" id="mdia7" class="ux">multi -</text>
+                <text x="1010" y="450" data-x-rel="-145" id="mdia8" class="ux">dimensional</text>
+                <text x="1015" y="475" data-x-rel="-140" id="mdia9" class="ux">information</text>
+                <text x="1010" y="500" data-x-rel="-145" id="mdia10" class="ux">architecture</text>
             </g>
             <polygon id="s44" class="cls-1" points="1100.5 602.5 1014.5 549.5 976.5 470.5 1037.5 493.5 1100.5 602.5"/>
             <polygon id="_15" data-name="15" class="cls-2" points="1287.1 469.5 1184.29 469.5 1132.89 558.53 1184.29 647.57 1287.1 647.57 1338.5 558.53 1287.1 469.5"/>
@@ -190,9 +190,9 @@
             <polygon id="_6" data-name="6" class="cls-2" points="815.57 214.29 720.19 214.29 672.5 296.9 720.19 379.5 815.57 379.5 863.26 296.9 815.57 214.29"/>
             <g id="i_r_p_box" data-attach="#_11" class="attached raleway">
                 <polygon id="_11" data-name="11" class="cls-2" points="1125.88 204.16 1024.66 204.16 974.04 291.83 1024.66 379.5 1125.88 379.5 1176.5 291.83 1125.88 204.16"/>
-                <text x="1060" y="275" data-x-rel="-145" id="tirp5" class="ux">ideation</text>
-                <text x="1040" y="300" data-x-rel="-154" id="tirp6" class="ux">+ rapid</text>
-                <text x="1040" y="325" data-x-rel="-175" id="tirp7" class="ux">prototyping</text>
+                <text x="1050" y="275" data-x-rel="-128" id="tirp5" class="ux">ideation</text>
+                <text x="1050" y="300" data-x-rel="-128" id="tirp6" class="ux">+ rapid</text>
+                <text x="1028" y="325" data-x-rel="-150" id="tirp7" class="ux">prototyping</text>
             </g>
             <polygon id="s5" class="cls-1" points="974.5 467.5 1036.5 490.5 909.5 490.5 871.5 467.5 974.5 467.5"/>
             <polygon id="_4" data-name="4" class="cls-2" points="825.83 13.5 720.17 13.5 667.35 105 720.17 196.5 825.83 196.5 878.65 105 825.83 13.5"/>
@@ -200,8 +200,10 @@
             <polygon id="s18" class="cls-1" points="842.5 169.5 815.5 214.5 863.5 296.5 903.5 273.5 842.5 169.5"/>
             <g id="r_b_d_box" data-attach="#_12" class="attached raleway">
                 <polygon id="_12" data-name="12" class="cls-2" points="973.98 292.5 872.95 292.5 822.43 380 872.95 467.5 973.98 467.5 1024.5 380 973.98 292.5"/>
-                <text x="860" y="375" data-x-rel="-155" id="trdb3" class="ux">research</text>
-                <text x="860" y="400" data-x-rel="-165" id="trdb4" class="ux">by design</text>
+                <text x="885" y="350" data-x-rel="-140" id="tr3" class="ux">research</text>
+                <text x="875" y="375" data-x-rel="-150" id="tr4" class="ux">by design &amp;</text>
+                <text x="880" y="400" data-x-rel="-145" id="tr5" class="ux">design by</text>
+                <text x="885" y="425" data-x-rel="-140" id="tr6" class="ux">research</text>
             </g>
             <polygon id="s47" class="cls-1" points="1024.5 273.5 1084.5 169.5 1023.5 195.5 977.5 283.5 1024.5 273.5"/>
             <polygon id="s4" class="cls-1" points="871.5 292.5 903.5 273.5 1024.5 273.5 974.5 292.5 871.5 292.5"/>
@@ -241,8 +243,8 @@
                 <text x="290" y="382" data-x-rel="-435" id="c">c</text>
                 <text x="325" y="382" data-x-rel="-400" id="sharma">sharma</text>
                 <text x="480" y="400" data-x-rel="-246" id="pipe">|</text>
-                <text x="511" y="360" data-x-rel="-212" id="title3" class="desc_text">multidisciplinary</text>
-                <text x="511" y="382" data-x-rel="-212" id="title1" class="desc_text">ux + interaction</text>
+                <text x="511" y="360" data-x-rel="-212" id="title3" class="desc_text">ux + interaction</text>
+                <text x="511" y="382" data-x-rel="-212" id="title1" class="desc_text">multidisciplinary</text>
                 <text x="511" y="404" data-x-rel="-212" id="title2" class="desc_text">designer</text>
                 <text x="190" y="440" data-x-rel="-535" id="gmail1" class="contact_text"><a href="mailto:aartics@gmail.com">aartics@gmail.com</a></text>
                 <text x="370" y="440" data-x-rel="-355" id="linkedin1" class="contact_text"><a href="https://www.linkedin.com/in/aartics" target="_blank">| &nbsp; &nbsp; linkedin</a></text>
@@ -255,7 +257,7 @@
             <clipPath id="clipPath_wolf_box">
                 <polygon points="1036.3 490.5 909.86 490.5 846.64 600 909.86 709.5 1036.3 709.5 1099.52 600 1036.3 490.5"/>
             </clipPath>
-                <image width="350" height="220" x="800" y="490" data-x-rel="-300" xlink:href="../img/wl_intro.png" class="image" id="wpimg"/>
+                <image width="350" height="220" x="800" y="490" data-x-rel="-300" xlink:href="img/wl_intro.png" class="image" id="wpimg"/>
                 <polygon id="_18" data-name="18" class="cls-2 project_box" points="1036.3 490.5 909.86 490.5 846.64 600 909.86 709.5 1036.3 709.5 1099.52 600 1036.3 490.5"/>
                 <text x="925" y="515" data-x-rel="-175" id="tw1" class="casestudy"><a href="projects/wolflion" target="_blank">UX CASE STUDY:</a></text>
                 <text x="930" y="550" data-x-rel="-170" id="tw2"class="projectdescription"><a href="projects/wolflion" target="_blank">an online pet</a></text>
