--- a/aartics/index.htm
+++ b/aartics/index.htm
@@ -272,8 +272,9 @@
                 <text x="190" y="440" data-x-rel="-535" id="gmail1" class="contact_text"><a href="mailto:aartics@gmail.com">aartics@gmail.com</a></text>
                 <text x="370" y="440" data-x-rel="-355" id="linkedin1" class="contact_text"><a href="https://www.linkedin.com/in/aartics" target="_blank">| &nbsp; &nbsp; linkedin</a></text>
                 <text x="485" y="440" data-x-rel="-240" id="resume1" class="contact_text"><a href="aartics_resume.pdf" target="_blank">| &nbsp; &nbsp; resume</a></text>
-                <text x="285" y="675" data-x-rel="-435" id="scrolldown" class="traleway">scroll down</text>
-                <text x="375" y="675" data-x-rel="-345" id="toexplore" class="traleway">to explore</text>
+                <text x="420" y="675" data-x-rel="-302" id="scrolldown" class="traleway">scroll to</text>
+                <text x="488" y="675" data-x-rel="-234" id="toexplore" class="traleway">explore</text>
+                <text x="455" y="660" data-x-rel="-268" id="arrow">&#x21E3;<text>
             </g>
 
             <g id="wolf_box" data-attach="#_18" class="attached" style="clip-path: url(#clipPath_wolf_box);" data-clip-path="#clipPath_wolf_box">
