hovering on polygons has clicking affordance, whee danke wel @owings1

--- a/aartics/index.htm
+++ b/aartics/index.htm
@@ -80,7 +80,7 @@
             <polygon id="s35" class="cls-1" points="1805.5 303.5 1825.5 298.5 1873.5 381.5 1849.5 381.5 1805.5 303.5"/>
             <polygon id="s36" class="cls-1" points="1810.5 303.5 1855.5 224.5 1873.5 215.5 1825.5 298.5 1810.5 303.5"/>
             <g id="chess_box" data-attach="#_39" class="attached raleway">
-                <polygon id="_39" data-name="39" class="cls-2 project_box_product" points="2285.31 302.5 2196.93 302.5 2152.74 379.04 2196.93 455.58 2285.31 455.58 2329.5 379.04 2285.31 302.5"/>
+                <polygon id="_39" data-name="39" class="cls-2 project_box_product has_link hovered hovered" points="2285.31 302.5 2196.93 302.5 2152.74 379.04 2196.93 455.58 2285.31 455.58 2329.5 379.04 2285.31 302.5"/>
                 <text x="2000" y="320" data-x-rel="-115" id="chess1" class="casestudy"><a href="https://github.com/aartics/chess_models" target="_blank">PRODUCT:</a></text>
                 <text x="2000" y="410" data-x-rel="-130" id="chess2" class="projectname"><a href="https://github.com/aartics/chess_models" target="_blank">chess of</a></text>
                 <text x="2000" y="430" data-x-rel="-125" id="chess3" class="projectname"><a href="https://github.com/aartics/chess_models" target="_blank">thrones</a></text>
@@ -95,7 +95,7 @@
             <polygon id="_26" data-name="26" class="cls-2" points="1804.67 303.5 1715.18 303.5 1670.43 381 1715.18 458.5 1804.67 458.5 1849.41 381 1804.67 303.5"/>
             <polygon id="s51" class="cls-1" points="1642.5 381.5 1571.5 504.5 1490.5 467.5 1541.5 379.5 1642.5 381.5"/>
             <g id="barcelona_box" data-attach="#_27" class="attached">
-                <polygon id="_27" data-name="27" class="cls-2 project_box_arch" points="1810.32 146.5 1719.68 146.5 1674.36 225 1719.68 303.5 1810.32 303.5 1855.64 225 1810.32 146.5"/>
+                <polygon id="_27" data-name="27" class="cls-2 project_box_arch has_link hovered" points="1810.32 146.5 1719.68 146.5 1674.36 225 1719.68 303.5 1810.32 303.5 1855.64 225 1810.32 146.5"/>
                 <text x="2000" y="170" data-x-rel="-137" id="barctitle" class="casestudy"><a href="projects/barcelona" target="_blank">URBAN PLANNING:</a></text>
                 <text x="2000" y="250" data-x-rel="-155" id="barc1" class="projectname"><a href="projects/barcelona" target="_blank">la ciudad idea</a></text>
                 <text x="2000" y="270" data-x-rel="-140" id="barc2" class="projectname"><a href="projects/barcelona" target="_blank">barcelona</a></text>
@@ -104,7 +104,7 @@
             <polygon id="_32" data-name="32" class="cls-2" points="2237.48 543.5 2144.52 543.5 2098.05 624 2144.52 704.5 2237.48 704.5 2283.95 624 2237.48 543.5"/>
             <polygon id="s74" class="cls-1" points="2199.5 215.5 2191.5 224.5 2234.5 147.5 2246.5 133.5 2199.5 215.5"/>
             <g id="bendy_box" data-attach="#_38" class="attached raleway">
-                <polygon id="_38" data-name="38" class="cls-2 project_box_product" points="2273.54 51.5 2179.62 51.5 2132.66 132.84 2179.62 214.17 2273.54 214.17 2320.5 132.84 2273.54 51.5"/>
+                <polygon id="_38" data-name="38" class="cls-2 project_box_product has_link hovered" points="2273.54 51.5 2179.62 51.5 2132.66 132.84 2179.62 214.17 2273.54 214.17 2320.5 132.84 2273.54 51.5"/>
                 <text x="2000" y="70" data-x-rel="-115" id="bendy1" class="casestudy"><a href="projects/bendy" target="_blank">PRODUCT:</a></text>
                 <text x="2000" y="180" data-x-rel="-140" id="bendy2" class="projectname"><a href="projects/bendy" target="_blank">shelter in</a></text>
                 <text x="2000" y="200" data-x-rel="-125" id="bendy3" class="projectname"><a href="projects/bendy" target="_blank">a cart</a></text>
@@ -132,14 +132,14 @@
             <polygon id="s71" class="cls-1" points="2148.5 470.5 2137.5 442.5 2174.5 382.5 2200.5 382.5 2148.5 470.5"/>
             <polygon id="_34" data-name="34" class="cls-2" points="1980.79 550.5 1883.21 550.5 1834.43 635 1883.21 719.5 1980.79 719.5 2029.57 635 1980.79 550.5"/>
             <g id="coimbatore" data-attach="#_29" class="attached raleway">
-                <polygon id="_29" data-name="29" class="cls-2 project_box_arch" points="1834.67 469.5 1731.33 469.5 1679.65 559 1731.33 648.5 1834.67 648.5 1886.35 559 1834.67 469.5"/>
+                <polygon id="_29" data-name="29" class="cls-2 project_box_arch has_link hovered" points="1834.67 469.5 1731.33 469.5 1679.65 559 1731.33 648.5 1834.67 648.5 1886.35 559 1834.67 469.5"/>
                 <text x="2000" y="490" data-x-rel="-150" id="uda1" class="casestudy"><a href="projects/coimbatore">ARCHITECTURE:</a></text>
                 <text x="2000" y="610" data-x-rel="-155" id="uda2" class="projectname"><a href="projects/coimbatore">fun republic</a></text>
                 <text x="2000" y="630" data-x-rel="-155" id="uda3" class="projectname"><a href="projects/coimbatore">coimbatore</a></text>
             </g>
             <polygon id="s59" class="cls-1" points="1999.5 381.5 2050.5 469.5 1951.5 453.5 1910.5 381.73 1999.5 381.5"/>
             <g id="sports_box" data-attach="#_35" class="attached">
-                <polygon id="_35" data-name="35" class="cls-2 project_box_product" points="2151.52 293.96 2050.17 293.96 1999.5 381.73 2050.17 469.5 2151.52 469.5 2202.19 381.73 2151.52 293.96"/>
+                <polygon id="_35" data-name="35" class="cls-2 project_box_product has_link hovered" points="2151.52 293.96 2050.17 293.96 1999.5 381.73 2050.17 469.5 2151.52 469.5 2202.19 381.73 2151.52 293.96"/>
                 <text x="2000" y="315" data-x-rel="-130" id="sport0" class="casestudy"><a href="projects/allsportsbar" target="_blank">INTERIORS:</a></text>
                 <text x="2000" y="440" data-x-rel="-160" id="sport1" class="projectname"><a href="projects/allsportsbar" target="_blank">all sports bar</a></text>
             </g>
@@ -181,7 +181,7 @@
             <polygon id="s100" class="cls-1" points="1125.5 204.5 1176.5 291.5 1100.5 314.5 1061.5 247.5 1125.5 204.5"/>
             <polygon id="s49" class="cls-1" points="1352.5 280.49 1305.5 288.49 1367.5 380.5 1409.5 379.99 1352.5 280.49"/>
             <g id="msc_urb_box" data-attach="#_22" class="attached raleway">
-                <polygon id="_22" data-name="22" class="cls-2 project_box_arch" points="1540.52 292.5 1439.48 292.5 1388.96 380 1439.48 467.5 1540.52 467.5 1591.04 380 1540.52 292.5"/>
+                <polygon id="_22" data-name="22" class="cls-2 project_box_arch has_link hovered" points="1540.52 292.5 1439.48 292.5 1388.96 380 1439.48 467.5 1540.52 467.5 1591.04 380 1540.52 292.5"/>
                 <text x="2000" y="310" data-x-rel="-147" id="msc1" class="casestudy"><a href="projects/assen" target="_blank">URBAN PLANNING:</a></text>
                 <text x="2000" y="425" data-x-rel="-165" id="msc2" class="projectname"><a href="projects/assen" target="_blank">city boulevard</a></text>
                 <text x="2000" y="445" data-x-rel="-130" id="msc3" class="projectname"><a href="projects/assen" target="_blank">assen</text>
@@ -230,7 +230,7 @@
                     <polygon points="658.07 488.5 533.93 488.5 471.87 596 533.93 703.5 658.07 703.5 720.13 596 658.07 488.5"/>
                 </clipPath>
                 <image width="350" height="300" x="420" y="430" data-x-rel="-300" xlink:href="../img/3d_intro.png" class="image" id="3dimg"/>
-                <polygon id="_3" data-name="3" class="cls-2 project_box" points="658.07 488.5 533.93 488.5 471.87 596 533.93 703.5 658.07 703.5 720.13 596 658.07 488.5"/>
+                <polygon id="_3" data-name="3" class="cls-2 project_box has_link hovered" points="658.07 488.5 533.93 488.5 471.87 596 533.93 703.5 658.07 703.5 720.13 596 658.07 488.5"/>
                 <text x="500" y="575" data-x-rel="-200" id="3d9">designing</text>
                 <text x="620" y="575" data-x-rel="-100" id="3d10">a 3D +</text>
                 <text x="500" y="605" data-x-rel="-210" id="3d11">inverse +</text>
@@ -240,16 +240,16 @@
             </g>
             <g id="arch_urb_box" data-attach="#_24" class="attached">
                 <polygon id="_24" data-name="24" class="cls-2" points="1683.91 64.5 1562.09 64.5 1501.18 170 1562.09 275.5 1683.91 275.5 1744.82 170 1683.91 64.5"/>
-                <text x="2000" y="170" data-x-rel="-190" id="arch1" class="titlearch"><a href="http://tinyurl.com/urbanaarti" target="_blank">architecture &amp;</a></text>
-                <text x="2000" y="190" data-x-rel="-170" id="arch2" class="titlearch"><a href="http://tinyurl.com/urbanaarti" target="_blank">urbanism</a></text>
+                <text x="2000" y="170" data-x-rel="-190" id="arch1" class="titlearch has_link hovered"><a href="http://tinyurl.com/urbanaarti" target="_blank">architecture &amp;</a></text>
+                <text x="2000" y="190" data-x-rel="-170" id="arch2" class="titlearch has_link hovered"><a href="http://tinyurl.com/urbanaarti" target="_blank">urbanism</a></text>
             </g>
             <polygon id="_20" data-name="20" class="cls-2" points="1500.5 380.51 1378.5 380.51 1317.5 486.17 1378.5 591.82 1500.5 591.82 1561.5 486.17 1500.5 380.51"/>
             <polygon id="xx05" class="cls-1" points="2225.5 556.5 2191.5 545.5 2239.5 462.5 2276.5 468.5 2225.5 556.5"/>
-            <polygon id="_40" data-name="40" class="cls-2 project_box_product" points="2379.09 468.5 2276.91 468.5 2225.81 557 2276.91 645.5 2379.09 645.5 2430.19 557 2379.09 468.5"/>
+            <polygon id="_40" data-name="40" class="cls-2 project_box_product has_link hovered" points="2379.09 468.5 2276.91 468.5 2225.81 557 2276.91 645.5 2379.09 645.5 2430.19 557 2379.09 468.5"/>
             <polygon id="s86" class="cls-1" points="2478.5 293.5 2584.5 273.5 2705.5 273.5 2579.5 293.5 2478.5 293.5"/>
             <polygon id="xx02" class="cls-1" points="2530.5 292.5 2519.5 297.5 2471.5 379.5 2480.68 378.5 2530.5 292.5"/>
             <g id="octet_box" data-attach="#_36" class="attached">
-                <polygon id="_36" data-name="36" class="cls-2 project_box_product" points="2472.84 215.5 2378.16 215.5 2330.82 297.5 2378.16 379.5 2472.84 379.5 2520.18 297.5 2472.84 215.5"/>
+                <polygon id="_36" data-name="36" class="cls-2 project_box_product has_link hovered" points="2472.84 215.5 2378.16 215.5 2330.82 297.5 2378.16 379.5 2472.84 379.5 2520.18 297.5 2472.84 215.5"/>
                 <text x="2000" y="235" data-x-rel="-120" id="uda1" class="casestudy"><a href="https://github.com/aartics/octet_truss_block" target="_blank">PRODUCT:</a></text>
                 <text x="2000" y="330" data-x-rel="-150" id="uda1" class="projectname"><a href="https://github.com/aartics/octet_truss_block" target="_blank">octet truss</a></text>
                 <text x="2000" y="350" data-x-rel="-130" id="uda1" class="projectname"><a href="https://github.com/aartics/octet_truss_block" target="_blank">block</a></text>
@@ -281,7 +281,7 @@
                 <polygon points="1036.3 490.5 909.86 490.5 846.64 600 909.86 709.5 1036.3 709.5 1099.52 600 1036.3 490.5"/>
             </clipPath>
                 <image width="350" height="220" x="800" y="490" data-x-rel="-300" xlink:href="img/wl_intro.png" class="image" id="wpimg"/>
-                <polygon id="_18" data-name="18" class="cls-2 project_box" points="1036.3 490.5 909.86 490.5 846.64 600 909.86 709.5 1036.3 709.5 1099.52 600 1036.3 490.5"/>
+                <polygon id="_18" data-name="18" class="cls-2 project_box has_link hovered" points="1036.3 490.5 909.86 490.5 846.64 600 909.86 709.5 1036.3 709.5 1099.52 600 1036.3 490.5"/>
                 <text x="925" y="515" data-x-rel="-175" id="tw1" class="casestudy"><a href="projects/wolflion" target="_blank">UX CASE STUDY:</a></text>
                 <text x="930" y="550" data-x-rel="-170" id="tw2" class="projectdescription"><a href="projects/wolflion" target="_blank">an online pet</a></text>
                 <text x="920" y="570" data-x-rel="-180" id="tw3" class="projectdescription"><a href="projects/wolflion" target="_blank">store experience</a></text>
@@ -293,7 +293,7 @@
                     <polygon points="1024.04 64.5 903.11 64.5 842.65 169.22 903.11 273.95 1024.04 273.95 1084.5 169.22 1024.04 64.5"/>
                 </clipPath>
                 <image width="560" height="220" x="685" y="55" data-x-rel="-400" xlink:href="img/resonateai.png" class="image" id="resonate_intro"/>
-                <polygon id="_7" data-name="7" class="cls-2 project_box" points="1024.04 64.5 903.11 64.5 842.65 169.22 903.11 273.95 1024.04 273.95 1084.5 169.22 1024.04 64.5"/>
+                <polygon id="_7" data-name="7" class="cls-2 project_box has_link hovered" points="1024.04 64.5 903.11 64.5 842.65 169.22 903.11 273.95 1024.04 273.95 1084.5 169.22 1024.04 64.5"/>
                 <text x="920" y="85" data-x-rel="-165" id="trai6" class="casestudy"><a href="projects/resonateai" target="_blank">UX CASE STUDY:</a></text>
                 <text x="905" y="145" data-x-rel="-180" id="trai9"class="projectdescription"><a href="projects/resonateai" target="_blank">let ai help you tell</a></text>
                 <text x="908" y="165" data-x-rel="-177" id="trai10"class="projectdescription"><a href="projects/resonateai" target="_blank">an effective story</a></text>
@@ -307,7 +307,7 @@
                     <polygon points="1352.45 280.5 1237.55 280.5 1180.11 380 1237.55 479.5 1352.45 479.5 1409.89 380 1352.45 280.5"/>
                 </clipPath>
                 <image width="350" height="220" x="1125" y="270" data-x-rel="-280" xlink:href="img/sfac_intro.png" class="image" id="sfac_intro"/>
-                <polygon id="_16" data-name="16" class="cls-2 project_box" points="1352.45 280.5 1237.55 280.5 1180.11 380 1237.55 479.5 1352.45 479.5 1409.89 380 1352.45 280.5"/>
+                <polygon id="_16" data-name="16" class="cls-2 project_box has_link hovered" points="1352.45 280.5 1237.55 280.5 1180.11 380 1237.55 479.5 1352.45 479.5 1409.89 380 1352.45 280.5"/>
                 <text x="1250" y="300" data-x-rel="-165" id="trsf6" class="casestudy"><a href="projects/sfac" target="_blank">UX CASE STUDY:</a></text>
                 <text x="1235" y="330" data-x-rel="-175" id="trsf9"class="projectdescription"><a href="projects/sfac" target="_blank">engage citizens in</a></text>
                 <text x="1230" y="350" data-x-rel="-180" id="trsf10"class="projectdescription"><a href="projects/sfac" target="_blank">choosing public art</a></text>
@@ -317,7 +317,7 @@
 
 
             <g id="mumbai_box" data-attach="#_30" class="attached">
-                <polygon id="_30" data-name="30" class="cls-2 project_box_arch" points="1784.72 381.5 1643.28 381.5 1572.55 504 1643.28 626.5 1784.72 626.5 1855.45 504 1784.72 381.5"/>
+                <polygon id="_30" data-name="30" class="cls-2 project_box_arch has_link hovered" points="1784.72 381.5 1643.28 381.5 1572.55 504 1643.28 626.5 1784.72 626.5 1855.45 504 1784.72 381.5"/>
                 <text x="2000" y="400" data-x-rel="-190" id="mumbai0" class="casestudy"><a href="projects/mumbai" target="_blank">URBAN PLANNING:</a></text>
                 <text x="2000" y="580" data-x-rel="-190" id="mumbai1" class="projectname"><a href="projects/mumbai" target="_blank">recentering</a></text>
                 <text x="2000" y="600" data-x-rel="-180" id="mumbai2" class="projectname"><a href="projects/mumbai" target="_blank">mumbai</a></text>
