hovers and shadows more awesome @owings1 more champagne

--- a/aartics/index.htm
+++ b/aartics/index.htm
@@ -23,7 +23,6 @@
             <polygon id="s8" class="cls-1" points="1144.5 179.5 1182.5 246.5 1197.5 242.5 1157.5 173.5 1144.5 179.5"/>
             <polygon id="xx01" class="cls-1" points="2629.5 292.5 2598.5 317.5 2634.5 380.5 2679.88 380.5 2629.5 292.5"/>
             <polygon id="yy5" class="cls-1" points="2180.5 566.5 2215.5 627.5 2400.5 719.5 2351.5 634.5 2180.5 566.5"/>
-            <polygon id="yy4" class="cls-1" points="2175.5 539.5 2231.5 556.5 2282.5 645.5 2225.5 623.5 2175.5 539.5"/>
             <polygon id="xxx07" class="cls-1" points="2104.5 241.5 2161.5 223.5 2206.5 300.5 2145.5 311.5 2104.5 241.5"/>
             <polygon id="xxx06" class="cls-1" points="2104.5 379.5 2152.5 379.5 2196.5 302.5 2145.5 311.5 2104.5 379.5"/>
             <polygon id="yy3" class="cls-1" points="2145.5 704.5 1994.5 627.5 1960.5 566.5 2099.5 623.5 2145.5 704.5"/>
@@ -102,6 +101,7 @@
             </g>
             <polygon id="_28" data-name="28" class="cls-2" points="1969.42 215.5 1873.58 215.5 1825.66 298.5 1873.58 381.5 1969.42 381.5 2017.34 298.5 1969.42 215.5"/>
             <polygon id="_32" data-name="32" class="cls-2" points="2237.48 543.5 2144.52 543.5 2098.05 624 2144.52 704.5 2237.48 704.5 2283.95 624 2237.48 543.5"/>
+            <polygon id="yy4" class="cls-1" points="2175.5 539.5 2231.5 556.5 2282.5 645.5 2225.5 623.5 2175.5 539.5"/>
             <polygon id="s74" class="cls-1" points="2199.5 215.5 2191.5 224.5 2234.5 147.5 2246.5 133.5 2199.5 215.5"/>
             <g id="bendy_box" data-attach="#_38" class="attached raleway">
                 <polygon id="_38" data-name="38" class="cls-2 project_box_product has_link hovered" points="2273.54 51.5 2179.62 51.5 2132.66 132.84 2179.62 214.17 2273.54 214.17 2320.5 132.84 2273.54 51.5"/>
@@ -239,7 +239,7 @@
                 <text x="587" y="635" data-x-rel="-135" id="3d14">website</text>
             </g>
             <g id="arch_urb_box" data-attach="#_24" class="attached">
-                <polygon id="_24" data-name="24" class="cls-2" points="1683.91 64.5 1562.09 64.5 1501.18 170 1562.09 275.5 1683.91 275.5 1744.82 170 1683.91 64.5"/>
+                <polygon id="_24" data-name="24" class="cls-2 project_box_arch has_link hovered" points="1683.91 64.5 1562.09 64.5 1501.18 170 1562.09 275.5 1683.91 275.5 1744.82 170 1683.91 64.5"/>
                 <text x="2000" y="170" data-x-rel="-190" id="arch1" class="titlearch has_link hovered"><a href="http://tinyurl.com/urbanaarti" target="_blank">architecture &amp;</a></text>
                 <text x="2000" y="190" data-x-rel="-170" id="arch2" class="titlearch has_link hovered"><a href="http://tinyurl.com/urbanaarti" target="_blank">urbanism</a></text>
             </g>
