--- a/aartics/projects/sfac/index.htm
+++ b/aartics/projects/sfac/index.htm
@@ -3,7 +3,6 @@
 <head>
 	<meta charset="utf-8" />
 	<title>aartics_sfac</title>
-	<link href="https://fonts.googleapis.com/css?family=ABeeZee" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="js/jquery.jInvertScroll.js"></script>
@@ -11,17 +10,17 @@
 </head>
 <body>
     <div class="header">
-			<h1>aartics.com/projects/sfac</h>
+			<h1>aartics.com/projects/sfac</h1>
     </div>
     <div class="scroll">
-			<img src="https://s3-us-west-2.amazonaws.com/aartics-portfolio/projects/sfac/img/sfac_intro.png">
+			<img src="local_img/sfac_intro.png" id=#splash>
     </div>
-    <div class="aartics_sfac_votingapp">
+<!--     <div class="aartics_sfac_votingapp">
     <h2>Video of the application</h2>
-        <video width="740" height="600" controls> <!-- add autoplay and loop -->
+        <video width="740" height="600" controls>
           <source src="https://s3-us-west-2.amazonaws.com/aartics-portfolio/projects/sfac/img/aartics_sfac_votingapp.mp4" type="video/mp4">
         </video>
-    </div>    
+    </div>   -->  
 </body>
 <script>
 $(document).ready(function() {
