--- a/aartics/index.htm
+++ b/aartics/index.htm
@@ -10,6 +10,20 @@
     <link rel="stylesheet" href="css/aartics.css" />
 </head>
 <body>
+    <div class="bigheader">
+        <svg id="message" xmlns="http://www.w3.org/2000/svg" width="1300" height="1200">
+            <text class="bigmsg" x="60" y="600" id="bighi">hi!</text>
+            <text class="bigmsg" x="60" y="660">i’m aartics.com and i’m</text> 
+            <text class="bigmsg" x="60" y="720">aarti's 3D portfolio website. </text> 
+            <text class="bigmsg" x="60" y="780">currently i render well only on laptop</text> 
+            <text class="bigmsg" x="60" y="840">resolution browser windows (1024 X 768), </text>
+            <text class="bigmsg" x="60" y="900">so please experience me there!</text>
+            <text class="bigmsg" x="60" y="980">but until the mobile magic gets ready,</text>
+            <text class="bigmsg" x="60" y="1040">click these links to see </text>
+            <text class="bigmsg" x="60" y="1100"><a href="aartics_resume.pdf" target="_blank">aarti’s resume</a></text>
+            <text class="bigmsg" x="60" y="1160"><a href="https://www.linkedin.com/in/aartics" target="_blank">or her linkedin profile.</a></text>
+        </svg>
+    </div>
     <div class="header">
         <h1>aartics.com</h1>
     </div>
